--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         transform: scale(2);
        }
         .jumbotron{
-               background-image: url(https://i.pinimg.com/originals/fa/7f/e0/fa7fe0e1b123aee12d0a7f5c3142fb41.jpg);
+               background-image: url(https://wallpaperaccess.com/full/731628.jpg);
         }
       </style>
 
