--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     
 <div class="jumbotron">
   <h1 class="display-4">Byte Size -  In a Nutshell</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+<p class="lead"> Byte-Size is a club owned by HIXS which specializes in branches of coding such as Web Development, Artificial Intelligence, Game Development and Ethical Hacking* .</p>
   <hr class="my-4">
-  <p>We have one motive and that is to help  children dive into the amazing world of techknology.</p>
+   <p>Our motive is to work together and help each other when needed while coding, making awesome projects in 3 branches Game development, AI and Web development. We want to learn how to make good use of technology to know it's benefits and disadvantages. /p>
   <a class="btn btn-primary btn-lg" href="#" role="button">Learn More</a>
 </div>
       <style>
